--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
     "reactstrap": "^9.0.1",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
